# LessRAG

./: .gitignore  API.md  GEMINI.md  README.md  README.zh.md  pyproject.toml
.github/workflows/: publish.yml
app/: config.example.toml  main.py
server/: main.py
server/api/: document.py  health.py  query.py
server/database/: README.md  connect.py  models.py  setup.py
server/schema/: base.py  document.py  health.py  query.py
server/tasks/: manager.py  process.py
server/utils/: config.py  logger.py  openai.py  parser.py  vector.py
tests/: sample.txt  test_api.py
web/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.vue  main.js
web/src/assets/: main.css
web/src/router/: index.js
web/src/utils/: alert.js  api.js  check.js  debounce.js  storage.js
web/src/views/: Chat.vue  Documents.vue
