[project]
name = "lessRAG"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docx2txt>=0.9",
    "fastapi>=0.136.1",
    "openai>=2.33.0",
    "peewee>=4.0.5",
    "pydantic>=2.13.3",
    "pymupdf>=1.27.2.3",
    "python-multipart>=0.0.27",
    "uvicorn>=0.46.0",
    "tomli>=2.0.1; python_version < '3.12'",
    "numpy>=2.2.6",
]

[project.scripts]
lessrag = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "server"]
